--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
+    "chart.js": "^4.4.6",
     "oh-vue-icons": "^1.0.0-rc3",
     "react-icons": "^5.3.0",
     "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.1",
     "vue-icons": "^2.0.0",
     "vue-router": "^4.4.5",
     "vuestic-ui": "^1.10.3"
