--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@coreui/vue": "^5.4.0",
+    "@supabase/supabase-js": "^2.46.1",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.4.6",
+    "dotenv": "^16.4.5",
     "oh-vue-icons": "^1.0.0-rc3",
     "react-icons": "^5.3.0",
     "vue": "^3.5.12",
